Prevent long URLs from overlapping
Fixes #9

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,4 +58,5 @@
 
  .supporter {
    min-height: 150px;
+   word-wrap: break-word;
  }
